--- a/react/src/sass/master.scss
+++ b/react/src/sass/master.scss
@@ -83,7 +83,7 @@
 
 .main-image {
 	height: 100vh;
-	background-image: url('http://192.168.33.10:3000/img/mainImage.png');
+	background-image: url('http://192.168.33.10:3000/img/main_image.png');
 	background-position: center;
 	background-size: cover;
 }
@@ -112,6 +112,7 @@
 .banner-text {
 	color: #CCCCCC;
 	font-size: 0.67em;
+	text-transform: uppercase;
 }
 
 .scroll-down {
@@ -163,6 +164,11 @@
 	@include projectLayout
 }
 
+.behance-logo {
+	text-align: center;
+	margin-bottom: 2em;
+}
+
 // DESIGNERS -------------------------------------------------------------------
 
 .latest-projects {
@@ -172,7 +178,6 @@
 .project-indiviudal{
     margin: 0 auto;
 }
-
 
 //CONTACTS ---------------------------------------------------------------------
 
@@ -262,6 +267,21 @@
 }
 
 @media only screen and (min-width: 600px) {
+
+	.header-bar {
+		height: 9vh;
+		.logo {
+			padding: 4% 0;
+		}
+		.menu-btn {
+			padding: 2%;
+		}
+	}
+
+	.our-goal-text {
+	 	margin-top: 4em;
+	}
+
     .contact-wrapper {
 		width: 70vw;
 		display: flex;
